Fix sonar warnings in tests (#2625)
GitOrigin-RevId: 041f98c04fdfdda1178cf68b5d7686b138b22e73