@@ -25,7 +25,6 @@ import org.junit.experimental.categories.Category;
 import org.junit.runner.RunWith;
 
 import java.util.Collection;
-import java.util.stream.Collectors;
 
 import static org.junit.Assert.assertEquals;
 
@@ -61,7 +60,7 @@ public class ProxySplitBrainTest extends SplitBrainTestSupport {
         assertTrueEventually(() -> {
             Collection<DistributedObject> distributedObjects = hz.getDistributedObjects().stream()
                     .filter(o -> !o.getName().startsWith(JobRepository.INTERNAL_JET_OBJECTS_PREFIX))
-                    .collect(Collectors.toList());
+                    .toList();
             int actualSize = distributedObjects.size();
             assertEquals(expectedCount, actualSize);
         });
